--- a/sources/VeloCity.Wpf.Presentation/Pages/TeamMemberVacations/VacationsControl.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/TeamMemberVacations/VacationsControl.xaml
@@ -17,27 +17,25 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <UserControl
-    x:Class="DustInTheWind.VeloCity.Wpf.Presentation.Pages.TeamMemberEmployments.EmploymentsControl"
+    x:Class="DustInTheWind.VeloCity.Wpf.Presentation.Pages.TeamMemberVacations.VacationsControl"
 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:teamMemberEmployments="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Pages.TeamMemberEmployments"
+    xmlns:local="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Pages.TeamMemberVacations"
     xmlns:customControls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls"
 
     mc:Ignorable="d"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    d:DataContext="{d:DesignInstance teamMemberEmployments:EmploymentsViewModel}">
+    d:DataContext="{d:DesignInstance local:VacationsViewModel}">
 
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
                 <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/StandardControls/StandardControlStyles.xaml" />
-                <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/LabeledContentStyles.xaml" />
-                <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/PanelWithTitleStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
         </ResourceDictionary>
@@ -45,36 +43,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <ScrollViewer>
         <ItemsControl
-            ItemsSource="{Binding Employments}"
-            Grid.IsSharedSizeScope="True">
+            ItemsSource="{Binding Vacations}">
 
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-
-                    <customControls:PanelWithTitle
-                        Title="{Binding TimeInterval}"
-                        Margin="0 0 0 20">
-
-                        <StackPanel
-                            HorizontalAlignment="Stretch"
-                            Orientation="Vertical">
-
-                            <customControls:LabeledContent Label="Hours per day">
-                                <TextBlock Text="{Binding HoursPerDay}" />
-                            </customControls:LabeledContent>
-
-                            <customControls:LabeledContent Label="Employment week">
-                                <TextBlock Text="{Binding EmploymentWeek}" />
-                            </customControls:LabeledContent>
-
-                            <customControls:LabeledContent Label="Country">
-                                <TextBlock Text="{Binding Country}" />
-                            </customControls:LabeledContent>
-
-                        </StackPanel>
-
-                    </customControls:PanelWithTitle>
-
+                    <TextBlock Text="{Binding}"></TextBlock>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
 
