--- a/sources/VeloCity.Wpf.Presentation/ChartsArea/CommitmentChart/CommitmentChartControl.xaml
+++ b/sources/VeloCity.Wpf.Presentation/ChartsArea/CommitmentChart/CommitmentChartControl.xaml
@@ -80,7 +80,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                 <wpf:ColumnSeries
                     Values="{Binding Values}"
-                    Fill="CornflowerBlue" />
+                    Fill="DarkGray" />
 
                 <wpf:ColumnSeries
                     Values="{Binding ActualValues}"
