--- a/sources/VeloCity.Wpf.Presentation/SprintsArea/SprintMemberCalendar/SprintMemberCalendarControl.xaml
+++ b/sources/VeloCity.Wpf.Presentation/SprintsArea/SprintMemberCalendar/SprintMemberCalendarControl.xaml
@@ -23,6 +23,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:sprintMemberCalendar="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.SprintsArea.SprintMemberCalendar"
 
     mc:Ignorable="d"
     d:DesignHeight="450"
