--- a/sources/VeloCity.Wpf.Presentation/SprintsArea/SprintMembers/SprintMembersView.xaml
+++ b/sources/VeloCity.Wpf.Presentation/SprintsArea/SprintMembers/SprintMembersView.xaml
@@ -23,9 +23,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:converters="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Converters;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls"
     xmlns:converters1="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls.Converters;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls"
     xmlns:sprintMemberCalendar="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.SprintsArea.SprintMemberCalendar"
+    xmlns:sprintMembers="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.SprintsArea.SprintMembers"
 
     mc:Ignorable="d"
     d:DesignHeight="450"
