--- a/sources/VeloCity.Wpf.Presentation/TeamMembersArea/TeamMembersList/TeamMembersListControl.xaml
+++ b/sources/VeloCity.Wpf.Presentation/TeamMembersArea/TeamMembersList/TeamMembersListControl.xaml
@@ -23,11 +23,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:customControls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls"
+    xmlns:teamMembersList="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.TeamMembersArea.TeamMembersList"
 
     mc:Ignorable="d"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    d:DataContext="{d:DesignInstance local:TeamMembersListViewModel}">
+    d:DataContext="{d:DesignInstance teamMembersList:TeamMembersListViewModel}">
 
     <UserControl.Resources>
         <ResourceDictionary>
